kubernetes/apps/pingvin-share/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingvin-share
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pingvin-share
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pingvin-share
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: pingvin-share
          image: docker.io/smp46/pingvin-share-x:v1.22.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /opt/app/backend/data
            - name: images
              mountPath: /opt/app/frontend/public/img
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 60
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pingvin-share-data
        - name: images
          persistentVolumeClaim:
            claimName: pingvin-share-images
