kubernetes/apps/pingvin-share/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingvin-share
spec:
  selector:
    app.kubernetes.io/name: pingvin-share
  ports:
    - name: http
      port: 3000
      targetPort: http
