kubernetes/apps/pingvin-share/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pingvin-share
spec:
  hostnames:
    - share.mashu.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pingvin-share
          port: 3000
