kubernetes/apps/pingvin-share/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pingvin-share-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pingvin-share
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: http
          protocol: TCP
